Trying to rendering issue on mobile

--- a/src/app/ui/ExceptionOverlay.module.css
+++ b/src/app/ui/ExceptionOverlay.module.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: calc(100% - 7.8915rem);
+    height: calc(100% - 4.5234rem - var(--safe-bottom));
     display: flex;
     flex-direction: column;
     z-index: 1000;
