--- a/src/app/ui/scanbar/Scanbar.module.css
+++ b/src/app/ui/scanbar/Scanbar.module.css
@@ -6,5 +6,5 @@
     align-self: stretch;
     background: #232323;
     z-index: 1001;
-    padding-bottom: 4rem;
+    padding-bottom: calc(var(--safe-bottom) + 0.7rem);
 }
